--- a/static/section.css
+++ b/static/section.css
@@ -18,6 +18,21 @@ section p
 	text-align: justify;
 }
 
+section a
+{
+    color: #6262bf;
+    font-weight: 900;
+}
+
+section a:visited
+{
+    color: #6262bf;
+}
+
+section a:hover
+{
+    color: #3b3b94;
+}
 
 section .news
 {
@@ -53,17 +68,18 @@ section h2:hover a
     color: #3a3a3a;
 }
 
-
-
-
-@media all and (max-width: 1024px)
+section h3
 {
-	section
-	{
-		margin-left: 0px;
-		width: 100%;
-		margin-top: 50px;
-		padding: 0 6px 0 0;
-	}
+    color: #373737;
+    font-size: 23px;
+}
 
+section h3 a:visited
+{
+    color: #373737;
+}
+
+section h3 a:hover
+{
+    color: #575757;
 }
