--- a/static/section.css
+++ b/static/section.css
@@ -16,6 +16,13 @@ section p
 	font-size: 20px;
 	text-indent:40px;
 	text-align: justify;
+
+}
+
+section p img
+{
+    display: block;
+    margin: auto;
 }
 
 section a
